--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
  	 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/bundle/dist/app.css">
+    <link rel="stylesheet" href="/dev/app/app.css">
     <!-- <Link Rel="SHORTCUT ICON" href="/src/favicon.ico"> -->
   </head>
   <body>
     <div class="container"></div>
   </body>
-  	<script src="/bundle/dist/app.js"></script>
+  	<script src="/dev/app/app.js"></script>
 </html>
