--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
- 	 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/dev/app/app.css">
+ 	 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="/dev/app/app.css"/>
+    <meta name="renderer" content="webkit"/> 
+ 		<!-- Polyfills -->
+    <!--[if lt IE 10]>
+    <script src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
+    <![endif]-->
+    <!--[if lte IE 11]>
+    <script src="https://as.alipayobjects.com/g/component/??es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js"></script>
+    <![endif]-->
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?57b39b870ebf41f0edc438892d023fed";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
     <!-- <Link Rel="SHORTCUT ICON" href="/src/favicon.ico"> -->
   </head>
   <body>
